--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,5 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+    color : rgb(136, 131, 131);
 }
